--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<div class="row">
 			<div class="col-sm-7">
 				<h3>About me</h3>
-				<p>Welcome visitor. My name is Christos Dalamagkas and I am an Informatics and Telecommunications Engineering graduate from the University of Western Macedonia. I like to deal with many topics related to Computer Science and Telecommunication, focusing on science and IT engineering.</p>
+				<p>Welcome visitor and thank you for visiting my website. My name is Christos Dalamagkas, graduated from the Dept of Informatics and Telecommunications Engineering, University of Western Macedonia, in 2017. I like to deal with many topics related to Computer Science and Telecommunications, focusing on science, IT engineering and computer networks.</p>
 
-				<p>Currently, I am PhD candidate at the University of Western Macedonia, focusing on optical networks and optimization. Also, I contribute as researcher to the SPEAR project, funded by the European Commission and Horizon 2020 programme. In parallel, I am editor of educational material at the University of Western Macedonia, I am studying for the CCNA certification and I am a freelancer ICT engineer (VAT registered).</p>
+				<p>Currently, I am PhD candidate at the University of Western Macedonia, focusing on optical networks and optimization. In parallel, I am working as research assistant for various EU-funded research projects oriented to cybersecurity and smart grids (SPEAR, SDN-microSENSE). My main responsibilities on these projects are the supervision and implementation of the large-scale greek pilots as well as scientific contribution to project deliverables. In addition, I have been editor of educational material at the University of Western Macedonia. I am a Cisco Certified Network Associate (CCNA) since 2019 and currently I am pursuing for the CCNP certification. Last, I am also VAT registered freelancer ICT engineer.</p>
 				
-				<p>You can navigate through the tabs to learn more about me. Also you can view and download my CV [En]: <a href="/cv" class="btn-social btn-outline" style="float:none;" target="_blank"><span class="sr-only">CV</span><i class="fa fa-fw fa-file-pdf-o" ></i></a></p>
+				<p>You can navigate through the tabs to learn more about me. Also you can view and download my CV [En]: <a href="/cd.pdf" class="btn-social btn-outline" style="float:none;" target="_blank"><span class="sr-only">CV</span><i class="fa fa-fw fa-file-pdf-o" ></i></a></p>
 			</div>
 		</div>	
 		</div>
@@ -131,7 +131,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					May 2018 - Now | Athens, Greece
 				</div>
 				<div class="col-sm-1">
-					<a href="http://www.kdep.gr/" target="_blank"><img width="55" height="55" src="Images/dei.svg"/></a>
+					<a href="http://www.kdep.gr/" target="_blank"><img width="55" height="55" src="assets/images/dei.svg"/></a>
 				</div>
 			</div>
 
@@ -142,7 +142,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					Oct 2018 - Now | Athens, Greece
 				</div>
 				<div class="col-sm-1">
-					<a href="https://www.iekalfa.gr/" target="_blank"><img width="55" height="55" src="Images/alfa.png"/></a>
+					<a href="https://www.iekalfa.gr/" target="_blank"><img width="55" height="55" src="assets/images/alfa.png"/></a>
 				</div>
 			</div>
 			
@@ -154,7 +154,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					July - September 2017 | Brighton, United Kingdom
 				</div>
 				<div class="col-sm-1">
-					<a href="https://www.brighton.ac.uk/" target="_blank"><img width="55" height="55" src="Images/brighton.png"/></a>
+					<a href="https://www.brighton.ac.uk/" target="_blank"><img width="55" height="55" src="assets/images/brighton.png"/></a>
 				</div>
 			</div>
 			<div class="row" style="margin-bottom:45px">
@@ -164,7 +164,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					March 2017 - Now | Kozani, Greece
 				</div>
 				<div class="col-sm-1">
-					<a href="https://www.uowm.gr" target="_blank"><img width="55" height="55" src="Images/uowm.png"/></a>
+					<a href="https://www.uowm.gr" target="_blank"><img width="55" height="55" src="assets/images/uowm.png"/></a>
 				</div>
 			</div>
 			<div class="row" style="margin-bottom:45px">
@@ -174,7 +174,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					July - August 2016 | Athens, Greece
 				</div>
 				<div class="col-sm-1">
-					<a href="http://intelli-corp.com/" target="_blank"><img width="55" height="40" src="Images/intelli.png"/></a>
+					<a href="http://intelli-corp.com/" target="_blank"><img width="55" height="40" src="assets/images/intelli.png"/></a>
 				</div>
 			</div>
 		</div>
