--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="container">
 	<div class="jumbotron">
 		<h1><b>Christos Dalamagkas</b></h1>      
-			<p><b>ICT Engineer, MIEEE</b></p>
+			<p><b>ICT Engineer, CCNA</b></p>
 	</div>      
 	
 	<ul class="nav nav-tabs nav-justified" id="tabsul">
