--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 				<p>Currently, I am PhD candidate at the University of Western Macedonia, focusing on optical networks and optimization. In parallel, I am working as research assistant for various EU-funded research projects oriented to cybersecurity and smart grids (SPEAR, SDN-microSENSE). My main responsibilities on these projects are the supervision and implementation of the large-scale greek pilots as well as scientific contribution to project deliverables. In addition, I have been editor of educational material at the University of Western Macedonia. I am a Cisco Certified Network Associate (CCNA) since 2019 and currently I am pursuing for the CCNP certification. Last, I am also VAT registered freelancer ICT engineer.</p>
 				
-				<p>You can navigate through the tabs to learn more about me. Also you can view and download my CV [En]: <a href="/cd.pdf" class="btn-social btn-outline" style="float:none;" target="_blank"><span class="sr-only">CV</span><i class="fa fa-fw fa-file-pdf-o" ></i></a></p>
+				<p>You can navigate through the tabs to learn more about me. Also you can view and download my CV (English and Greek):</p>
+				<p>[EN]: <a href="/cv.pdf" class="btn-social btn-outline" style="float:none;" target="_blank"><span class="sr-only">CV</span><i class="fa fa-fw fa-file-pdf-o" ></i></a></p>
+				<p>[GR]: <a href="/cv-gr.pdf" class="btn-social btn-outline" style="float:none;" target="_blank"><span class="sr-only">CV</span><i class="fa fa-fw fa-file-pdf-o" ></i></a></p>
 			</div>
 		</div>	
 		</div>
