--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<a href="skype:chris.dal?chat" class="btn-social btn-outline"><span class="sr-only">Skype</span><i class="fa fa-fw fa-skype"></i></a>
 		<a href="https://www.linkedin.com/in/cdalamagkas" class="btn-social btn-outline" target="_blank" ><span class="sr-only">Linkedin</span><i class="fa fa-fw fa-linkedin"></i></a>
 		<a href="https://github.com/cdalamagkas/" class="btn-social btn-outline" target="_blank"> <span class="sr-only">GitHub</span><i class="fa fa-github" aria-hidden="true"></i></a>
-		<a href="/cv" class="btn-social btn-outline" target="_blank"><span class="sr-only">CV</span><i class="fa fa-fw fa-file-pdf-o" ></i>
+		<a href="/cv.pdf" class="btn-social btn-outline" target="_blank"><span class="sr-only">CV</span><i class="fa fa-fw fa-file-pdf-o" ></i>
 </a>
 	</div>
 </footer>
