Corrected the thesis url

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<h1>Projects</h1>
 			<div class="panel panel-default">
 				<div class="panel-heading">Diploma Thesis: "Design of Market Mechanism for Dynamic Bandwidth Allocation on XG-PON"</div>
-				<div class="panel-body">My diploma thesis, submitted in partial fulfillment of the requirements for the bachelor degree of Informatics and Telecommunications Engineering, is available online <a href="/thesis" target="_blank">here</a> [GR].</div>
+				<div class="panel-body">My diploma thesis, submitted in partial fulfillment of the requirements for the bachelor degree of Informatics and Telecommunications Engineering, is available online <a href="/thesis.pdf" target="_blank">here</a> [GR].</div>
 			</div>
 			<h1>Publications</h1>
 			<div class="list-group">
